main nav bar progress

--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
         <!-- TODO: convert to absolute paths once Flask server setup -->
         <link rel="stylesheet" href="./static/css/bootstrap.css">
         <link rel="stylesheet" href="./static/css/style.css">
+        <meta charset="utf-8"/>
     </head>
     <body>
         <!-- Navigation bar at top of screen -->
         <div id="main-navbar" class="navbar">
             <div class="container-fluid">
-                <ul class="nav-menu pull-left">
+                <ul class="nav-menu nav-daddy pull-left">
                     <li>
-                        <a class="nav-entry">Option 1</a>
+                        <a>Option 1</a>
                     </li>
                     <li>
-                        <a class="nav-entry">Option 2</a>
+                        <a>Option 2</a>
                     </li>
                     <li>
-                        <a class="nav-entry">Option 3</a>
+                        <a>Option 3</a>
                     </li>
                 </ul>
             </div>
