nav bar still in progress

--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
             <div class="container-fluid">
                 <ul class="nav-menu nav-daddy pull-left">
                     <li>
-                        <a>Option 1</a>
+                        <a>Home</a>
                     </li>
                     <li>
-                        <a>Option 2</a>
+                        <a>Twitch</a>
                     </li>
                     <li>
-                        <a>Option 3</a>
+                        <a>Twitter</a>
+                    </li>
+                    <li>
+                        <a>Donate</a>
+                    </li>
+                    <li>
+                        <a>Subscribe</a>
                     </li>
                 </ul>
             </div>
