banner in progress

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <!-- Navigation bar at top of screen -->
         <div id="main-navbar" class="navbar">
-            <div class="container-fluid">
+            <div class="container">
                 <ul class="nav-menu nav-daddy pull-left">
                     <li>
                         <a>Home</a>
@@ -32,8 +32,27 @@
         </div>
 
         <!-- Banner with information -->
-        <section "banner">
+        <section id="banner">
+            <div class="container">
+                <!-- Displays logo icon -->
+                <div id="logo">
+                    <img src="./static/images/logo.png" />
+                </div>
 
+                <div id="stream-status">
+                    <div id="stream-status-info">
+                        <h2>Status</h2>
+                        <p>
+                            info would go here
+                            <br />
+                            but I have no info retrieved...
+                        </p>
+                    </div>
+                    <div id="stream-status-preview">
+                        <img class="stream-preview" src="./static/images/stream-preview.png" />
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
 </html>
