--- a/index.html
+++ b/index.html
@@ -54,5 +54,35 @@
                 </div>
             </div>
         </section>
+
+        <!-- Content section -->
+        <section id="content">
+            <div id="tweet-box" class="col-lg-6 content-text">
+                <ul>
+                    <li>
+                        tweet #3
+                    </li>
+                    <li>
+                        tweet #2
+                    </li>
+                    <li>
+                        tweet #1
+                    </li>
+                </ul>
+            </div>
+            <div id="blog-box" class="col-lg-6 content-text">
+                <ul>
+                    <li>
+                        blog #3
+                    </li>
+                    <li>
+                        blog #2
+                    </li>
+                    <li>
+                        blog #1
+                    </li>
+                </ul>
+            </div>
+        </section>
     </body>
 </html>
