--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <!-- Navigation bar at top of screen -->
         <div id="main-navbar" class="navbar">
             <div class="container">
-                <ul class="nav-menu nav-daddy pull-left">
+                <!-- <ul class="nav-menu nav-daddy pull-left"> -->
+                <ul class="nav-menu pull-left">
                     <li>
                         <a>Home</a>
                     </li>
@@ -49,40 +50,55 @@
                         </p>
                     </div>
                     <div id="stream-status-preview">
-                        <img class="stream-preview" src="./static/images/stream-preview.png" />
+                        <img class="stream-preview" src="./static/images/stream-preview.PNG" />
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- Content section -->
-        <section id="content">
-            <div id="tweet-box" class="col-lg-6 content-text">
-                <ul>
-                    <li>
-                        tweet #3
-                    </li>
-                    <li>
-                        tweet #2
-                    </li>
-                    <li>
-                        tweet #1
-                    </li>
-                </ul>
+        <!-- <section id="content">
+            <div class="row">
+                <div id="tweet-box" class="col-md-6 content-box">
+                    <ul>
+                        <li>
+                            tweet #3
+                        </li>
+                        <li>
+                            tweet #2
+                        </li>
+                        <li>
+                            tweet #1
+                        </li>
+                    </ul>
+                </div>
+                <div id="blog-box" class="col-md-6 content-box">
+                    <ul>
+                        <li>
+                            blog #3
+                        </li>
+                        <li>
+                            blog #2
+                        </li>
+                        <li>
+                            blog #1
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div id="blog-box" class="col-lg-6 content-text">
-                <ul>
-                    <li>
-                        blog #3
-                    </li>
-                    <li>
-                        blog #2
-                    </li>
-                    <li>
-                        blog #1
-                    </li>
-                </ul>
-            </div>
-        </section>
+        </section> -->
+        
+        <div id="content" class="row">
+                <div class="col-md-4">.col-md-4</div>
+                <div class="col-md-4 ml-auto">.col-md-4 .ml-auto</div>
+              </div>
+              <div id="content" class="row">
+                <div class="col-md-3 ml-md-auto">.col-md-3 .ml-md-auto</div>
+                <div class="col-md-3 ml-md-auto">.col-md-3 .ml-md-auto</div>
+              </div>
+              <div id="content" class="row">
+                <div class="col-auto mr-auto">.col-auto .mr-auto</div>
+                <div class="col-auto">.col-auto</div>
+              </div>
     </body>
 </html>
