--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <div class="container">
             <div class="row">
                 <!-- Displays logo icon -->
-                <div id="logo" class="col-md-3 mr-auto">
+                <div id="logo" class="col-md-3">
                     <img src="./static/images/logo.png"/>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 offset-md-4">
                     <div class="conatiner">
                     <div id="stream-box" class="row">
                         <div class="col-md-5">
@@ -64,18 +64,37 @@
         </div>
         </section>
 
-        
-        <div id="content" class="row">
-                <!-- <div class="col-md-4">.col-md-4</div>
-                <div class="col-md-4 ml-auto">.col-md-4 .ml-auto</div>
-              </div>
-              <div id="content" class="row">
-                <div class="col-md-3 ml-md-auto">.col-md-3 .ml-md-auto</div>
-                <div class="col-md-3 ml-md-auto">.col-md-3 .ml-md-auto</div>
-              </div>
-              <div id="content" class="row">
-                <div class="col-auto mr-auto">.col-auto .mr-auto</div>
-                <div class="col-auto">.col-auto</div>
-              </div> -->
+        <section id="content">
+        <div class="conatiner">
+            <div class="row">
+                <div id="tweeter" class="col-md-5">
+                    <!-- cards for each tweet -->
+                    <br />
+                    <div class="card">
+                        <h6 class="card-subtitle pt-1 text-muted">@robwiztv</h5>
+                        <div class="card-body">
+                            <p class="card-text">m u s t a r d</p>
+                        </div>
+                    </div><br />
+                    <div class="card">
+                        <h6 class="card-subtitle pt-1 text-muted">@robwiztv</h5>
+                        <div class="card-body">
+                            <p class="card-text">1 3 y e a r s f p s e x p e r i e n c e</p>
+                        </div>
+                    </div><br />
+                    <div class="card">
+                        <h6 class="card-subtitle pt-1 text-muted">@robwiztv</h5>
+                        <div class="card-body">
+                            <p class="card-text">p e a c e a n d l o v e</p>
+                        </div>
+                    </div><br />
+
+                </div>
+                <div id="blog" class="col-md-5 offset-md-2">
+                    <!-- Cards for each blog -->
+                </div>
+            </div>
+        </div>
+        </section>
     </body>
 </html>
