playing around with cards

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 <div class="col-md-6 offset-md-3">
                     <div class="container">
                     <div id="stream-box" class="row">
-                        <div class="col-md-5">
+                        <div class="col-md-5 nopadding">
                             <div id="stream-status">
-                            <h5 id="online-status" class="p1">Online</h5>
                             <p>Stream title</p>
                             <p>Game</p>
                             </div>
                         </div>
                         <div class="col-md-7">
+                            <h5 id="online-status" class="p1">Online 😄</h5>
                             <img src="./static/images/stream-preview.PNG"/>
                         </div> 
                     </div>
@@ -64,28 +64,34 @@
         </section>
         <section id="content" class="container">
             <div id="content" class="row">
+
                 <div id="tweeter" class="col-md-5">
                     <!-- cards for each tweet -->
+                    
+                    <div class="card">
+                        <div class="card-header">The Latest and Greatest</div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                <a href="https://twitter.com/robwiztv/">
+                                    <h6 class="text-muted">@robwiztv</h6>
+                                </a>
+                                <p class="card-text">m u s t a r d</p>
+                            </li>
+                            <li class="list-group-item">
+                                <a href="https://twitter.com/robwiztv/">
+                                    <h6 class="text-muted">@robwiztv</h6>
+                                </a>
+                                <p class="card-text">1 3 y e a r s f p s e x p e r i e n c e</p>
+                            </li>
+                            <li class="list-group-item">
+                                <a href="https://twitter.com/robwiztv/">
+                                    <h6 class="text-muted">@robwiztv</h6>
+                                </a>
+                                <p class="card-text">p e a c e a n d l o v e</p>
+                            </li>
+                        </ul>
+                    </div>
                     <br />
-                    <div class="card">
-                        <h6 class="card-subtitle pt-1 text-muted">@robwiztv</h5>
-                        <div class="card-body">
-                            <p class="card-text">m u s t a r d</p>
-                        </div>
-                    </div><br />
-                    <div class="card">
-                        <h6 class="card-subtitle pt-1 text-muted">@robwiztv</h5>
-                        <div class="card-body">
-                            <p class="card-text">1 3 y e a r s f p s e x p e r i e n c e</p>
-                        </div>
-                    </div><br />
-                    <div class="card">
-                        <h6 class="card-subtitle pt-1 text-muted">@robwiztv</h5>
-                        <div class="card-body">
-                            <p class="card-text">p e a c e a n d l o v e</p>
-                        </div>
-                    </div><br />
-
                 </div>
                 <div id="blog" class="col-md-5 offset-md-2">
                     <!-- Cards for each blog -->
