--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <link rel="stylesheet" href="./static/css/style.css">
         <meta charset="utf-8"/>
     </head>
-    <body class="bg-dark">
+    <body>
 
         <!-- Navigation bar, pretty much  -->
-        <nav class="navbar navbar-expand-lg navbar-dark blk container">
+        <nav class="navbar navbar-expand-lg navbar-dark blk container-fluid">
         
             <a class="navbar-brand" href="#">
                 <img src="./static/images/mustard.png" height="30" width="30" />
@@ -38,13 +38,13 @@
         </nav>
 
         <!-- Banner with information -->
-        <section id="banner" class="container">
+        <section id="banner" class="container-fluid">
             <div class="row">
                 <!-- Displays logo icon -->
                 <div id="logo" class="col-md-3">
                     <img src="./static/images/logo.png"/>
                 </div>
-                <div class="col-md-6 offset-md-3">
+                <div class="col-md-5 offset-md-4">
                     <div class="container">
                     <div id="stream-box" class="row">
                         <div class="col-md-5 nopadding">
@@ -53,8 +53,8 @@
                             <p>Game</p>
                             </div>
                         </div>
-                        <div class="col-md-7">
-                            <h5 id="online-status" class="p1">Online 😄</h5>
+                        <div id="online-status" class="col-md-7">
+                            <h5 class="p1">Online 😄</h5>
                             <img src="./static/images/stream-preview.PNG"/>
                         </div> 
                     </div>
@@ -62,40 +62,112 @@
                 </div>
             </div>
         </section>
-        <section id="content" class="container">
+        <section id="content" class="container-fluid">
+            <br />
             <div id="content" class="row">
+                <!-- tweeter section -->
+                <div id="tweeter" class="col-md-6">
+                    <div class="card mb-2">
+                        <div class="card-header lead">The Latest and Greatest</div>
+                    </div>
 
-                <div id="tweeter" class="col-md-5">
                     <!-- cards for each tweet -->
-                    
-                    <div class="card">
-                        <div class="card-header">The Latest and Greatest</div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                <a href="https://twitter.com/robwiztv/">
-                                    <h6 class="text-muted">@robwiztv</h6>
-                                </a>
-                                <p class="card-text">m u s t a r d</p>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="https://twitter.com/robwiztv/">
-                                    <h6 class="text-muted">@robwiztv</h6>
-                                </a>
-                                <p class="card-text">1 3 y e a r s f p s e x p e r i e n c e</p>
-                            </li>
-                            <li class="list-group-item">
-                                <a href="https://twitter.com/robwiztv/">
-                                    <h6 class="text-muted">@robwiztv</h6>
-                                </a>
-                                <p class="card-text">p e a c e a n d l o v e</p>
-                            </li>
-                        </ul>
+                    <div class="card mb-1">
+                        <div class="card-body">
+                            <a href="https://twitter.com/robwiztv/">
+                                <h6 class="text-muted">@robwiztv</h6>
+                            </a>
+                            <p>m u s t a r d</p>
+                        </div>
+                    </div>
+                    <div class="card mb-1">
+                        <div class="card-body">
+                            <a href="https://twitter.com/robwiztv/">
+                                <h6 class="text-muted">@robwiztv</h6>
+                            </a>
+                            <p>p e a c a n d l o v e</p>
+                        </div>
+                    </div>
+                    <div class="card mb-1">
+                        <div class="card-body">
+                            <a href="https://twitter.com/robwiztv/">
+                                <h6 class="text-muted">@robwiztv</h6>
+                            </a>
+                        </div>
+                        <img class="card-img-top" alt="tweet" src="https://pbs.twimg.com/media/DZ0RuPWUQAEQ4em.jpg">
+                        <div class="card-body">
+                            <p>i m a g e t w e e t</p>
+                        </div>
                     </div>
                     <br />
                 </div>
-                <div id="blog" class="col-md-5 offset-md-2">
-                    <!-- Cards for each blog -->
+                <!-- end of tweeter -->
+                <!-- blog section -->
+                <div id="blog" class="col-md-6">
+                    <div id="blog-title" class="card lead mb-2">
+                        <div class="card-header">Latest Posts</div>
+                    </div>
+                    <!-- Post objects -->
+                    <div class="card mb-1">
+                        <div class="card-header">
+                            Blog Title #3
+                            <h6 class="card-subtitle text-muted">@robwiztv</h6>
+                        </div>
+
+                        <div class="card-body">
+                            <p>
+                                I have 13 years of fps experience.
+                            </p>
+                            <p>
+                                taste oss
+                            </p>
+                        </div>
+                        <div class="card-footer text-muted small text-right">
+                            5:10 pm
+                            10/8/2018
+                        </div>
+                    </div>
+                    <div class="card mb-1">
+                        <div class="card-header">
+                            Blog Title #2
+                            <h6 class="card-subtitle text-muted">@moomasterq</h6>
+                        </div>
+
+                        <div class="card-body">
+                            <p>
+                                If this website were finished we'd have a blog post here with information about anything. 
+                            </p>
+                            <p>
+                                There'd be another paragraph here if I had more information to write but I don't because this is filler text.
+                                Don't bother reading this but I know I put this warning too late so I'm glad you read it.
+                            </p>
+                        </div>
+                        <div class="card-footer text-muted small text-right">
+                            4:52 pm
+                            10/8/2018
+                        </div>
+                    </div>
+                    <div class="card mb-1">
+                        <div class="card-header">
+                            Blog Title #1
+                            <h6 class="card-subtitle text-muted">@moomasterq</h6>
+                        </div>
+
+                        <div class="card-body">
+                            <p>
+                                This is my first post. I don't like paragraphs so there is only 1.
+                                There'd be a lot of information here if it were a proper post. Maybe some links.
+                                I'm not sure how I'll make the editor work though.
+                            </p>
+                        </div>
+                        <div class="card-footer text-muted small text-right">
+                            7:31 am
+                            10/7/2018
+                        </div>
+                    </div>
+                    <br />
                 </div>
+                <!-- end of blog -->
             </div>
         </section>
     </body>
