--- a/index.html
+++ b/index.html
@@ -67,36 +67,40 @@
             <div id="content" class="row">
                 <!-- tweeter section -->
                 <div id="tweeter" class="col-md-6">
-                    <div class="card mb-2">
-                        <div class="card-header lead">The Latest and Greatest</div>
+                    <div class="card mb-2 bg-dark">
+                        <div class="card-header lead">The Latest and Greatest Tweets</div>
                     </div>
 
                     <!-- cards for each tweet -->
-                    <div class="card mb-1">
+                    <div class="card mb-1 bg-dark">
                         <div class="card-body">
-                            <a href="https://twitter.com/robwiztv/">
-                                <h6 class="text-muted">@robwiztv</h6>
-                            </a>
-                            <p>m u s t a r d</p>
+                            <h6 class="text-muted">
+                                <a href="https://twitter.com/robwiztv/" class="text-muted">@robwiztv</a>
+                                tweeted 6 hrs ago
+                            </h6>
+                            <p class="mb-0">m u s t a r d</p>
                         </div>
                     </div>
-                    <div class="card mb-1">
+                    <div class="card mb-1 bg-dark">
                         <div class="card-body">
-                            <a href="https://twitter.com/robwiztv/">
-                                <h6 class="text-muted">@robwiztv</h6>
-                            </a>
-                            <p>p e a c a n d l o v e</p>
+                            <h6 class="text-muted">
+                                <a href="https://twitter.com/robwiztv/" class="text-muted">@robwiztv</a>
+                                tweeted 1 week ago
+                            </h6>
+                            <p class="mb-0">p e a c e a n d l o v e</p>
                         </div>
                     </div>
-                    <div class="card mb-1">
+                    <div class="card mb-1 bg-dark">
                         <div class="card-body">
-                            <a href="https://twitter.com/robwiztv/">
-                                <h6 class="text-muted">@robwiztv</h6>
-                            </a>
+                            <h6 class="text-muted">
+                                <a href="https://twitter.com/robwiztv/" class="text-muted">@robwiztv</a>
+                                tweeted 10 months ago
+                            </h6>
                         </div>
                         <img class="card-img-top" alt="tweet" src="https://pbs.twimg.com/media/DZ0RuPWUQAEQ4em.jpg">
                         <div class="card-body">
-                            <p>i m a g e t w e e t</p>
+                            <p class="mb-0">i m a g e t w e e t</p>
+                            
                         </div>
                     </div>
                     <br />
@@ -104,11 +108,11 @@
                 <!-- end of tweeter -->
                 <!-- blog section -->
                 <div id="blog" class="col-md-6">
-                    <div id="blog-title" class="card lead mb-2">
+                    <div id="blog-title" class="card lead mb-2 bg-dark">
                         <div class="card-header">Latest Posts</div>
                     </div>
                     <!-- Post objects -->
-                    <div class="card mb-1">
+                    <div class="card mb-1 bg-dark">
                         <div class="card-header">
                             Blog Title #3
                             <h6 class="card-subtitle text-muted">@robwiztv</h6>
@@ -127,7 +131,7 @@
                             10/8/2018
                         </div>
                     </div>
-                    <div class="card mb-1">
+                    <div class="card mb-1 bg-dark">
                         <div class="card-header">
                             Blog Title #2
                             <h6 class="card-subtitle text-muted">@moomasterq</h6>
@@ -147,7 +151,7 @@
                             10/8/2018
                         </div>
                     </div>
-                    <div class="card mb-1">
+                    <div class="card mb-1 bg-dark">
                         <div class="card-header">
                             Blog Title #1
                             <h6 class="card-subtitle text-muted">@moomasterq</h6>
